<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_converter"
            android:icon="@drawable/ic_menu_camera"
            android:checked="true"
            android:title="@string/title_converter" />
        <item
            android:id="@+id/nav_calculator"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/title_calculator" />
        <item
        android:id="@+id/nav_editor"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/title_editor" />

    </group>

    <item android:title="@string/nav_subtitle_communicate">
        <menu>

            <item
                android:id="@+id/nav_contact"
                android:icon="@android:drawable/ic_dialog_email"
                android:title="@string/nav_menu_contact" />
        </menu>
    </item>

</menu>
